[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/animatronic_one.tscn" type="PackedScene" id=1]
[ext_resource path="res://environment.tres" type="Environment" id=2]
[ext_resource path="res://fonts/big.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/bigger.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/menu.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatronicOne:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "spinning"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatronicOne:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Spatial" type="Spatial" parent="."]

[node name="AnimatronicOne" parent="Spatial" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spatial/AnimatronicOne"]
root_node = NodePath("../..")
autoplay = "spinning"
anims/RESET = SubResource( 1 )
anims/spinning = SubResource( 2 )

[node name="Camera" type="Camera" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.405374, 1.96903, 1.54952 )
environment = ExtResource( 2 )
fov = 37.1

[node name="OmniLight" type="OmniLight" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.51819, 1.42464, 1.76126 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 50
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 1030.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 638.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 3 )
text = "Nights
at
The Attraction"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 460.0
margin_right = 638.0
margin_bottom = 771.0
custom_constants/separation = 40

[node name="Night1" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 638.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 4 )
text = "Night 1"
flat = true
align = 0

[node name="Night2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 117.0
margin_right = 638.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 4 )
text = "Night 2"
flat = true
align = 0

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 638.0
margin_bottom = 311.0
custom_fonts/font = ExtResource( 4 )
text = "Exit"
flat = true
align = 0

[node name="Transition" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
anims/RESET = SubResource( 3 )
anims/fade_to_black = SubResource( 4 )

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Night1" to="." method="_on_Night1_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Night2" to="." method="_on_Night2_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
